[package]
name = "discord_tools_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
dotenvy = "0.15.7"
serde_urlencoded = "0.7.1"


[lib]
# Defines the library file (src/lib.rs)
path = "src/lib.rs"